@@ -146,9 +146,9 @@ on the memory stick. This works because Debian CD images are
 </para><para condition="isohybrid-unsupported">
 
 The easiest way to prepare your USB memory stick is to download
-<filename>hd-media/boot.img.gz</filename>, and use gunzip to extract the 256 MB
+<filename>hd-media/boot.img.gz</filename>, and use gunzip to extract the 1 GB
 image from that file. Write this image directly to your memory stick, which
-must be at least 256 mb in size. Of course this will destroy anything already
+must be at least 1 GB in size. Of course this will destroy anything already
 on the memory stick. Then mount the memory stick, which will now have a FAT
 filesystem on it. Next, download a &debian; netinst CD image, and copy that file
 to the memory stick; any filename is ok as long as it ends in
