@@ -87,7 +87,7 @@ as follows, after having made sure that the stick is unmounted:
 
 An alternative way to set up your USB stick is to manually copy
 the installer files, and also a CD image to it.
-Note that the USB stick should be at least 256 MB in size (smaller
+Note that the USB stick should be at least 1 GB in size (smaller
 setups are possible if you follow <xref linkend="usb-copy-flexible"/>).
 
 </para><para>
@@ -102,12 +102,10 @@ configuration file</phrase>.
 </para><para>
 
 Note that, although convenient, this method does have one major
-disadvantage: the logical size of the device will be limited to 256 MB,
+disadvantage: the logical size of the device will be limited to 1 GB,
 even if the capacity of the USB stick is larger. You will need to
 repartition the USB stick and create new file systems to get its full
 capacity back if you ever want to use it for some different purpose.
-A second disadvantage is that you cannot copy a full CD image onto
-the USB stick, but only the smaller businesscard or netinst CD images.
 
 </para><para arch="x86">
 
@@ -137,7 +135,7 @@ After that, mount the USB memory stick
 which will now have
 <phrase arch="x86">a FAT filesystem</phrase>
 <phrase arch="powerpc">an HFS filesystem</phrase>
-on it, and copy a &debian; netinst or businesscard ISO image to it.
+on it, and copy a &debian; ISO image (netinst, businesscard, or full CD) to it.
 Unmount the stick (<userinput>umount /mnt</userinput>) and you are done.
 
 </para>
