@@ -57,6 +57,7 @@ installation-guide (2011xxxx) UNRELEASED; urgency=low
   [ Joey Hess ]
   * Remove dead link to Phoenix large disk BIOS faq. Closes: #638268
   * Add a pointer to the unofficial non-free CDs with firmware.
+  * 1 gb USB key now needed for hd-media. Closes: #666090
 
  -- Samuel Thibault <sthibault@debian.org>  Tue, 21 Feb 2012 20:47:50 +0100
 
